<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/casa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/casa"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/casa3"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/cuadrotexto"
        android:layout_width="685dp"
        android:layout_height="151dp"
        android:contentDescription="@string/cuadrotexto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/casa"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="@+id/casa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944"
        app:srcCompat="@drawable/cuadrotexto" />

    <com.example.aventuratextual2.Typewriter
        android:id="@+id/type_textWriter"
        android:layout_width="470dp"
        android:layout_height="87dp"
        android:fontFamily="@font/tipografiaportada"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <ImageView
        android:id="@+id/imagedre"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/imagedre"
        app:layout_constraintBottom_toBottomOf="@+id/type_textWriter"
        app:layout_constraintEnd_toEndOf="@+id/cuadrotexto"
        app:srcCompat="@drawable/quejicadre" />


    <Button
        android:id="@+id/buttonsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_button"
        android:text="@string/si"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:onClick="presionaBoton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_button"
        android:text="@string/no"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>